[tool.poetry]
name = "jadlogtracking"
version = "0.1.0"
description = ""
authors = ["Vinicius Justino <justdgoncalves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
bs4 = "^0.0.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
